fixed home page alignment

--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -1,14 +1,18 @@
 
 .section {
-	padding: 5% 5%;
+	padding: 5vh 5%;
 }
 
 .container-1 {
 	display: flex;
+	height: 90vh;
 	justify-content: space-between;
 }
 
 .content-section {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	width: 100%;
 }
 
